--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-aniso8601==6.0.0
-Click==7.0
-Flask==1.0.2
-Flask-JWT-Extended==3.18.1
-Flask-RESTful==0.3.7
-Flask-SQLAlchemy==2.3.2
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-PyJWT==1.7.1
-pytz==2019.1
-six==1.12.0
-SQLAlchemy==1.3.3
-Werkzeug==0.15.2
+aniso8601==9.0.1
+blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
+Flask==3.0.3
+Flask-RESTful==0.3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+pytz==2024.1
+six==1.16.0
+Werkzeug==3.0.3
